Added class "button" to buttons to simplify css.

--- a/view/oai-pmh-harvester/admin/index/sets.phtml
+++ b/view/oai-pmh-harvester/admin/index/sets.phtml
@@ -16,7 +16,7 @@ $sets = $form->getOption('sets') ?: [];
 <?= $this->pageTitle($translate('Prepare import'), 1, $translate('OAI-PMH Harvester')) ?>
 
 <div id="page-actions">
-    <button form="harvest-list-sets" type="submit"><?= $translate('Harvest') ?></button>
+    <button form="harvest-list-sets" type="submit" class="button"><?= $translate('Harvest') ?></button>
 </div>
 
 <h2><?= $repositoryName ?></h2>
