--- a/view/oai-pmh-harvester/admin/index/index.phtml
+++ b/view/oai-pmh-harvester/admin/index/index.phtml
@@ -10,7 +10,7 @@ $translate = $this->plugin('translate');
 <?= $this->pageTitle($translate('Harvester'), 1, $translate('OAI-PMH')) ?>
 
 <div id="page-actions">
-    <button form="harvest-repository" type="submit"><?= $translate('View sets') ?></button>
+    <button form="harvest-repository" type="submit" class="button"><?= $translate('View sets') ?></button>
 </div>
 
 <h3><?= $translate('Set repository to harvest') ?></h3>
