--- a/view/oai-pmh-harvester/admin/index/index.phtml
+++ b/view/oai-pmh-harvester/admin/index/index.phtml
@@ -4,7 +4,14 @@
  * @var \OaiPmhHarvester\Form\HarvestForm $form
  */
 
-$translate = $this->plugin('translate');
+$plugins = $this->getHelperPluginManager();
+$assetUrl = $plugins->get('assetUrl');
+$translate = $plugins->get('translate');
+
+$this->headLink()
+    ->appendStylesheet($assetUrl('css/oai-pmh-harvester.css', 'OaiPmhHarvester'));
+
+$this->htmlElement('body')->appendAttribute('class', 'oai-pmh-harvester oai-pmh-harvester-index');
 ?>
 
 <?= $this->pageTitle($translate('Harvester'), 1, $translate('OAI-PMH')) ?>
