--- a/view/oai-pmh-harvester/admin/index/index.phtml
+++ b/view/oai-pmh-harvester/admin/index/index.phtml
@@ -9,11 +9,10 @@ $translate = $this->plugin('translate');
 
 <?= $this->pageTitle($translate('Harvester'), 1, $translate('OAI-PMH')) ?>
 
-<h3><?= $translate('Set repository to harvest') ?></h3>
-<?= $this->form()->openTag($form) ?>
-<fieldset id='page-actions'>
-    <button type="submit"><?= $translate('View sets') ?></button>
-</fieldset>
-<?= $this->formCollection($form, false) ?>
+<div id="page-actions">
+    <button form="harvest-repository" type="submit"><?= $translate('View sets') ?></button>
+</div>
 
-<?= $this->form()->closeTag($form) ?>
+<h3><?= $translate('Set repository to harvest') ?></h3>
+
+<?= $this->form($form) ?>
