Added a setting to harvest a specific date from/until.

--- a/asset/css/oai-pmh-harvester.css
+++ b/asset/css/oai-pmh-harvester.css
@@ -2,4 +2,9 @@
     .oai-pmh-harvester .subhead::before {
         content: "";
     }
+
+    form.oai-pmh-harvester .datetime-date {
+        width: 12em;
+        margin-right: 12px;
+    }
 }
