Add sources and the ability to configure mappings for those sources
Sources allow to save information about OAI-PMH repositories to make
future harvests of the same repository easier.
Sources consist of:
- A name
- An OAI-PMH repository base URL
- A list of sets (or none, to harvest the whole repository)
- A configuration

Configurations are where various settings (including mappings) can be
stored and shared among multiple sources.
Configurations consist of:
- A name
- A converter, which is a Laminas service responsible for converting an
  OAI-PMH record into data suitable for Omeka. It can be configurable or
  not.
- A list of settings that depends on the selected converter (if it is
  configurable)
Configurations can be duplicated so that existing configurations can be
used as a starting point for other configurations.

By default there are 3 non-configurable converters that use the
built-ins harvester maps: oai_dc, oai_dcterms and mets.
There is also one configurable converter, xpath, that allows users to
specify their own mappings using XPath expressions.

As converters are Laminas services, new converters can be added by other
modules (configuration key: oaipmhharvester_converters)

The install and upgrade process creates 5 configurations: 1 for each
non-configurable converters, and 2 that use the xpath converter (1 with
all mappings for oai_dc, 1 with all mappings for oai_dcterms)

In order to not break existing workflows, the original harvest process
is left almost untouched and should behave exactly the same as before
this patch. It is simply re-labelled as "one-off harvest".

This new way of harvesting is not 100% equivalent in terms of features.
For instance:
- there is no whitelist/blacklist,
- there is no debug options to store responses in files,
- no item sets are created,
- there is no "undo" feature (but the list of items harvested from a
  specific source can be obtained using a new search filter, so they can
  be deleted that way),

--- a/view/oai-pmh-harvester/admin/index/index.phtml
+++ b/view/oai-pmh-harvester/admin/index/index.phtml
@@ -29,4 +29,11 @@ $this->headScript()
 
 <h3><?= $translate('Set repository to harvest') ?></h3>
 
+<p>
+<?= sprintf(
+    $translate('Use this form if you want to harvest a repository only once (or occasionally) and if default mappings fit your needs. If you want to repeatedly harvest the same repository, or want better control on mappings, <a href="%s">define a new source</a>.'),
+    $this->url('admin/oaipmhharvester/source', ['action' => 'add'])
+); ?>
+</p>
+
 <?= $this->form($form) ?>
