--- a/view/oai-pmh-harvester/admin/index/past-harvests.phtml
+++ b/view/oai-pmh-harvester/admin/index/past-harvests.phtml
@@ -36,7 +36,7 @@ $this->headLink()
 
 <form method='POST'>
     <fieldset id='page-actions'>
-        <input type="submit" value="<?= $escape($translate('Submit')) ?>" />
+        <input type="submit" value="<?= $escape($translate('Delete harvested resources')) ?>" />
     </fieldset>
     <table class="tablesaw" data-tablesaw-mode="stack">
         <thead>
