Added advanced search of harvests.

--- a/view/oai-pmh-harvester/admin/index/past-harvests.phtml
+++ b/view/oai-pmh-harvester/admin/index/past-harvests.phtml
@@ -63,6 +63,7 @@ $this->headLink()
         <tr class="<?= $undoJob ? 'undone' : '' ?>">
             <td>
                 <input type="checkbox" name="harvest_id[]" value="<?= $harvest->id() ?>" <?= $undoJob ? ' disabled="disabled"' : '' ?>/>
+                <span><?= $harvest->id() ?></span>
             </td>
             <td>
                 <span class="oai-pmh-date">
