--- a/view/oai-pmh-harvester/admin/index/index.phtml
+++ b/view/oai-pmh-harvester/admin/index/index.phtml
@@ -20,7 +20,7 @@ $this->headScript()
 <?= $this->pageTitle($translate('Harvester'), 1, $translate('OAI-PMH')) ?>
 
 <div id="page-actions">
-    <button form="harvest-repository" type="submit" class="button"><?= $translate('View sets') ?></button>
+    <button form="harvest-repository-form" type="submit" class="button"><?= $translate('View sets') ?></button>
 </div>
 
 <nav class="section-nav">
