--- a/view/oai-pmh-harvester/admin/index/sets.phtml
+++ b/view/oai-pmh-harvester/admin/index/sets.phtml
@@ -26,7 +26,7 @@ $sets = $form->getOption('sets') ?: [];
 <?= $this->pageTitle($translate('Prepare import'), 1, $translate('OAI-PMH Harvester')) ?>
 
 <div id="page-actions">
-    <button form="harvest-list-sets" type="submit" class="button"><?= $translate('Harvest') ?></button>
+    <button form="harvest-list-sets-form" type="submit" class="button"><?= $translate('Harvest') ?></button>
 </div>
 
 <nav class="section-nav">
