Replaced is_null() by operator "===" or "!==".

--- a/view/oai-pmh-harvester/admin/index/sets.phtml
+++ b/view/oai-pmh-harvester/admin/index/sets.phtml
@@ -35,7 +35,7 @@ $sets = $form->getOption('sets') ?: [];
 
 <h2><?= $repositoryName ?></h2>
 <p>
-    <?php if (is_null($total)): ?>
+    <?php if ($total === null): ?>
         <?= sprintf($translate('The repository %1$s (%2$s) has an undefined number of sets.'), $repositoryName, $endpoint) ?>
     <?php else: ?>
         <?= sprintf($translate('The repository %1$s (%2$s) has %3$d sets.'), $repositoryName, $endpoint, $total) ?>
